Add tuples as a dependency.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ToSRAM/lib/Swing-range-slider"]
 	path = ToSRAM/lib/Swing-range-slider
-	url = git://github.com/johnchen902/Swing-range-slider
+	url = git://github.com/johnchen902/Swing-range-slider.git
+[submodule "ToSRAM/lib/javatuples"]
+	path = ToSRAM/lib/javatuples
+	url = git://github.com/javatuples/javatuples.git
