Update RangeSlider submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "ToSRAM/lib/Swing-range-slider"]
+[submodule "Swing-range-slider"]
 	path = ToSRAM/lib/Swing-range-slider
 	url = git://github.com/johnchen902/Swing-range-slider.git
-[submodule "ToSRAM/lib/javatuples"]
+[submodule "javatuples"]
 	path = ToSRAM/lib/javatuples
 	url = git://github.com/javatuples/javatuples.git
